--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -182,9 +182,18 @@ h3 {
   height: 100%;
 }
 
+.banner-content ul {
+  list-style: none;
+}
+
+.banner-content a {
+  color: white;
+}
+
 .banner-title {
   color: white;
   padding: 20px;
+  z-index: 100;
 }
 
 .banner-text {
@@ -216,7 +225,7 @@ h3 {
 
 /*---- Travel Tips Background End ----*/
 .contact {
-  background: #BBBFCA;
+  background: rgb(187, 191, 202);
   background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
   padding: 100px 0px;
   position: relative;
@@ -236,7 +245,7 @@ h3 {
   resize: none;
   padding: 1rem;
   height: 150px;
-  background: #fff;
+  background: white;
   border: 0;
   border-radius: 30px;
   margin-bottom: 1rem;
@@ -246,7 +255,7 @@ h3 {
 .contact-info {
   padding: 2rem 2rem 1rem;
   border-radius: 8px;
-  background: #BBBFCA;
+  background: rgb(187, 191, 202);
   background: linear-gradient(to left, rgb(187, 191, 202), rgb(205, 159, 250));
 }
 
@@ -367,7 +376,7 @@ h3 {
 .sec2-travel-video a {
   cursor: pointer;
   text-decoration: none;
-  color: #f1f1f1;
+  color: white;
   justify-self: center;
 }
 
@@ -501,16 +510,16 @@ input {
   color: #fff;
   border-radius: 2rem;
   border: 0;
-  background: #7a60ff;
-  background: linear-gradient(to left, #7a60ff, #cd9ffa);
+  background: rgb(122, 96, 255);
+  background: linear-gradient(to left, rgb(122, 96, 255), rgb(205, 159, 250));
   cursor: pointer;
 }
 
 .contact-info {
   padding: 2rem 2rem 1rem;
   border-radius: 8px;
-  background: #7a60ff;
-  background: linear-gradient(to left, #7a60ff, #cd9ffa);
+  background: rgb(122, 96, 255);
+  background: linear-gradient(to left, rgb(122, 96, 255), rgb(205, 159, 250));
 }
 
 .contact-item {
@@ -526,6 +535,105 @@ input {
   margin: 0;
 }
 
+/*------ Animation start------*/
+@keyframes extend {
+  0% {
+    width: 600px;
+    height: 200px;
+    border-radius: 100px;
+  }
+  10% {
+    width: 610px;
+    height: 210px;
+    background: #fff;
+    margin-left: -5px;
+    margin-top: -5px;
+  }
+  20% {
+    width: 600px;
+    height: 200px;
+    background: #6fb07f;
+    margin-left: 0px;
+    margin-top: 0px;
+  }
+  100% {
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    margin-left: 190px;
+    background: #6fb07f;
+  }
+}
+@keyframes disappear {
+  0% {
+    opacity: 1;
+  }
+  20% {
+    color: #fff;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  70% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.cont, submit {
+  border: none;
+  border-width: 1px;
+  width: 600px;
+  height: 200px;
+  /*border-radius*/
+  border-radius: 100px;
+  background: #fff;
+  position: absolute;
+  border: 5px solid #6fb07f;
+  font-size: 48px;
+  color: #6fb07f;
+}
+
+.cont img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  opacity: 0;
+}
+
+.cont:focus {
+  /*animation*/
+  animation: extend 1s ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation-fill-mode: forwards;
+}
+
+.cont:focus > span {
+  /*animation*/
+  animation: disappear 1s ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation-fill-mode: forwards;
+}
+
+.cont:focus > img {
+  /*animation*/
+  animation: appear 1s ease-in-out;
+  /* Chrome, Safari, Opera */
+  animation-fill-mode: forwards;
+}
+
+/*------ Animation start------*/
 /* -------------TRAVEL BLOG------------- */
 /* Create two unequal columns that floats next to each other */
 /* Left column */
