--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -708,8 +708,7 @@ input {
     /* Chrome, Safari, Opera */
     animation-fill-mode: forwards
     }
-
-    /*------ Animation start------*/
+/*------ Animation End------*/
 /* -------------TRAVEL BLOG------------- */
 
 /* Create two unequal columns that floats next to each other */
@@ -1138,7 +1137,7 @@ input {
 @media only screen and (min-width:768px) and (max-width:1023px) {
     .galeria {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(8, $lg1);
+        grid-template-rows: repeat(9, $lg1);
     }
 }
 
