--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -272,7 +272,7 @@ h3 {
   margin: 0;
 }
 
-/*------ Media Query Navbar Start -------*/
+/*------ Media Query Start -------*/
 @media all and (max-width: 992px) {
   .navbar .navbar-collapse {
     overflow: auto;
@@ -291,7 +291,6 @@ h3 {
     padding-bottom: 20px;
     margin: 10px 0px 0px;
   }
-  /*------ Media Query Navbar Start -------*/
   #contact_form {
     margin-bottom: 20px;
   }
@@ -299,6 +298,7 @@ h3 {
     font-size: 12px;
   }
 }
+/*------ Media Query End -------*/
 /* ------------ Index End ------------- */
 /* ------------ Personalized Sections ------------- */
 /* ------------ ABOUT ME SECTION 1 CSS LEFT REUSE FORM PAGES------------- */
@@ -497,7 +497,7 @@ input {
   resize: none;
   padding: 1rem;
   height: 150px;
-  background: #fff;
+  background: white;
   border: 0;
   border-radius: 30px;
   margin-bottom: 1rem;
@@ -507,7 +507,7 @@ input {
 .btn-grad {
   padding: 0.7rem 2rem;
   display: inline-block;
-  color: #fff;
+  color: white;
   border-radius: 2rem;
   border: 0;
   background: rgb(122, 96, 255);
@@ -536,103 +536,6 @@ input {
 }
 
 /*------ Animation start------*/
-@keyframes extend {
-  0% {
-    width: 600px;
-    height: 200px;
-    border-radius: 100px;
-  }
-  10% {
-    width: 610px;
-    height: 210px;
-    background: #fff;
-    margin-left: -5px;
-    margin-top: -5px;
-  }
-  20% {
-    width: 600px;
-    height: 200px;
-    background: #6fb07f;
-    margin-left: 0px;
-    margin-top: 0px;
-  }
-  100% {
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
-    margin-left: 190px;
-    background: #6fb07f;
-  }
-}
-@keyframes disappear {
-  0% {
-    opacity: 1;
-  }
-  20% {
-    color: #fff;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes appear {
-  0% {
-    opacity: 0;
-  }
-  70% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-.cont, submit {
-  border: none;
-  border-width: 1px;
-  width: 600px;
-  height: 200px;
-  /*border-radius*/
-  border-radius: 100px;
-  background: #fff;
-  position: absolute;
-  border: 5px solid #6fb07f;
-  font-size: 48px;
-  color: #6fb07f;
-}
-
-.cont img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0);
-  opacity: 0;
-}
-
-.cont:focus {
-  /*animation*/
-  animation: extend 1s ease-in-out;
-  /* Chrome, Safari, Opera */
-  animation-fill-mode: forwards;
-}
-
-.cont:focus > span {
-  /*animation*/
-  animation: disappear 1s ease-in-out;
-  /* Chrome, Safari, Opera */
-  animation-fill-mode: forwards;
-}
-
-.cont:focus > img {
-  /*animation*/
-  animation: appear 1s ease-in-out;
-  /* Chrome, Safari, Opera */
-  animation-fill-mode: forwards;
-}
-
 /*------ Animation End------*/
 /* -------------TRAVEL BLOG------------- */
 /* Create two unequal columns that floats next to each other */
