--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -268,7 +268,7 @@ h3 {
 }
 
 
-/*------ Media Query Navbar Start -------*/
+/*------ Media Query Start -------*/
 @media all and (max-width:992px) {
 .navbar .navbar-collapse {
 	overflow: auto;
@@ -281,13 +281,13 @@ h3 {
 	margin-bottom:$xs2;
 }
 }
+
 @media all and (max-width:768px) {
     .banner-content {
         padding-right: 0px;
         padding-bottom: $xs2;
         margin: $xs1 0px 0px;
-    }
-    /*------ Media Query Navbar Start -------*/   
+    }  
     #contact_form {
         margin-bottom:$xs2;
     }
@@ -295,6 +295,7 @@ h3 {
         font-size: 12px;
     }
 }
+    /*------ Media Query End -------*/ 
 /* ------------ Index End ------------- */
 
 /* ------------ Personalized Sections ------------- */
@@ -529,7 +530,7 @@ input {
 	resize: none;
 	padding: 1rem;
 	height: 150px;
-	background: #fff;
+	background: $color5;
 	border: 0;
 	border-radius: 30px;
 	margin-bottom: 1rem;
@@ -541,7 +542,7 @@ input {
 .btn-grad {
     padding: .7rem 2rem;
 	display: inline-block;
-	color: #fff;
+	color: $color5;
 	border-radius: 2rem;
 	border: 0;
 	background: $color8;
@@ -565,149 +566,8 @@ input {
 	margin: 0;
 }
 /*------ Animation start------*/
-@-webkit-keyframes extend {
-    0% {
-        width: 600px;
-        height: 200px;
-        border-radius: 100px;
-        } 10% {
-        width: 610px;
-        height: 210px;
-        background: #fff;
-        margin-left: - 5px;
-        margin-top: - 5px;
-        } 20% {
-        width: 600px;
-        height: 200px;
-        background: #6fb07f;
-        margin-left: 0px;
-        margin-top: 0px;
-        } 100% {
-        width: 200px;
-        height: 200px;
-        border-radius: 100px;
-        margin-left: 190px;
-        background: #6fb07f;
-        }
-    }
-@keyframes extend {
-    0% {
-        width: 600px;
-        height: 200px;
-        border-radius: 100px;
-        } 10% {
-        width: 610px;
-        height: 210px;
-        background: #fff;
-        margin-left: - 5px;
-        margin-top: - 5px;
-        } 20% {
-        width: 600px;
-        height: 200px;
-        background: #6fb07f;
-        margin-left: 0px;
-        margin-top: 0px;
-        } 100% {
-        width: 200px;
-        height: 200px;
-        border-radius: 100px;
-        margin-left: 190px;
-        background: #6fb07f;
-        }
-    }
 
-@-webkit-keyframes disappear {
-    0% {
-        opacity: 1;
-        } 20% {
-        color: #fff;
-        } 100% {
-        opacity: 0;
-        }
-    }
-@keyframes disappear {
-    0% {
-        opacity: 1;
-        } 20% {
-        color: #fff;
-        } 100% {
-        opacity: 0;
-        }
-    }
 
-@-webkit-keyframes appear {
-    0% {
-        opacity: 0;
-        } 70% {
-        opacity: 0;
-        } 100% {
-        opacity: 1;
-        }
-    }
-@keyframes appear {
-    0% {
-        opacity: 0;
-        } 70% {
-        opacity: 0;
-        } 100% {
-        opacity: 1;
-        }
-    }
-.cont, submit {
-    border: none;
-    border-width: 1px;
-    width: 600px;
-    height: 200px;
-    /*border-radius*/
-    border-radius: 100px;
-    background: #fff;
-    position: absolute;
-    border: 5px solid #6fb07f;
-    font-size: 48px;
-    color: #6fb07f
-    }
-
-.cont img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
-    opacity: 0
-    }
-
-.cont:focus {
-    /*animation*/
-    -webkit-animation: extend 1s ease-in-out;
-    -ms-animation: extend 1s ease-in-out;
-    animation: extend 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
-    }
-
-.cont:focus > span {
-    /*animation*/
-    -webkit-animation: disappear 1s ease-in-out;
-    -ms-animation: disappear 1s ease-in-out;
-    animation: disappear 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
-    }
-
-.cont:focus > img {
-    /*animation*/
-    -webkit-animation: appear 1s ease-in-out;
-    -ms-animation: appear 1s ease-in-out;
-    animation: appear 1s ease-in-out;
-    -webkit-animation-fill-mode: forwards;
-    /* Chrome, Safari, Opera */
-    animation-fill-mode: forwards
-    }
 /*------ Animation End------*/
 /* -------------TRAVEL BLOG------------- */
 
