--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -5,7 +5,8 @@
   outline: none;
   margin: 0;
   padding: 0;
-  box-sizing: border-box; /*Respetar los padding adicionales*/
+  box-sizing: border-box;
+  /*Respetar los padding adicionales*/
   font-family: "museo-slab", "sans";
   font-weight: lighter;
 }
@@ -23,8 +24,18 @@ p {
   font-weight: lighter;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-weight: 700;
+}
+
+h2 {
+  font-size: 25px;
+}
+
+h3 {
+  font-size: 23px;
 }
 
 a {
@@ -55,14 +66,6 @@ a {
 .footer i {
   letter-spacing: 20px;
   justify-self: center;
-}
-
-h2 {
-  font-size: 25px;
-}
-
-h3 {
-  font-size: 23px;
 }
 
 .prelative {
@@ -155,7 +158,8 @@ h3 {
   color: white;
 }
 
-.navbar-style2 .active:after, .navbar-style2 .nav-link:after {
+.navbar-style2 .active:after,
+.navbar-style2 .nav-link:after {
   display: none;
 }
 
@@ -172,28 +176,9 @@ h3 {
   position: relative;
 }
 
-.banner::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.banner-content ul {
-  list-style: none;
-}
-
-.banner-content a {
-  color: white;
-}
-
 .banner-title {
   color: white;
   padding: 20px;
-  z-index: 100;
 }
 
 .banner-text {
@@ -202,13 +187,18 @@ h3 {
   margin: 40px 0px;
 }
 
-.banner-img {
-  border-radius: 20px;
-}
-
 .banner-text p {
   margin: 25px 0px;
   padding-bottom: 20px;
+}
+
+.banner-content a {
+  font-size: 20px;
+  color: white;
+}
+
+.banner-img {
+  border-radius: 20px;
 }
 
 .svg-wave {
@@ -224,54 +214,6 @@ h3 {
 }
 
 /*---- Travel Tips Background End ----*/
-.contact {
-  background: rgb(187, 191, 202);
-  background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
-  padding: 100px 0px;
-  position: relative;
-}
-
-.contact::before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-
-#contact_form textarea {
-  resize: none;
-  padding: 1rem;
-  height: 150px;
-  background: white;
-  border: 0;
-  border-radius: 30px;
-  margin-bottom: 1rem;
-  transition: all 0.3s ease-in-out;
-}
-
-.contact-info {
-  padding: 2rem 2rem 1rem;
-  border-radius: 8px;
-  background: rgb(187, 191, 202);
-  background: linear-gradient(to left, rgb(187, 191, 202), rgb(205, 159, 250));
-}
-
-.contact-item {
-  margin: 23px 0px;
-}
-
-.contact-item i {
-  font-size: 20px;
-}
-
-.contact-item p {
-  line-height: 20px;
-  margin: 0;
-}
-
 /*------ Media Query Start -------*/
 @media all and (max-width: 992px) {
   .navbar .navbar-collapse {
@@ -466,6 +408,26 @@ h3 {
 /* ------------ PAGES CSS ------------- */
 /* -------------CONTACT ME REUSE FOR INDEX VIEW------------- */
 /*Body*/
+.contact {
+  background: rgb(187, 191, 202);
+  background: linear-gradient(to left, rgb(33, 53, 85) 35%, rgb(79, 112, 156) 46%);
+  padding: 100px 0px;
+  position: relative;
+}
+
+.contact-item {
+  margin: 23px 0px;
+}
+
+.contact-item i {
+  font-size: 20px;
+}
+
+.contact-item p {
+  line-height: 20px;
+  margin: 0;
+}
+
 .contactB {
   background-image: url(../Media/fade.JPG);
   background-size: cover;
@@ -505,14 +467,39 @@ input {
 }
 
 .btn-grad {
+  transform: translate(0%, 0%);
   padding: 0.7rem 2rem;
   display: inline-block;
   color: white;
   border-radius: 2rem;
   border: 0;
-  background: rgb(122, 96, 255);
   background: linear-gradient(to left, rgb(122, 96, 255), rgb(205, 159, 250));
   cursor: pointer;
+}
+
+.wrapper button span {
+  position: relative;
+  z-index: 2;
+}
+
+.wrapper button:after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  border-radius: 2rem;
+  background: linear-gradient(to left, rgb(40, 60, 134), rgb(69, 162, 71));
+  transition: all 0.35s;
+}
+
+.wrapper button:hover {
+  color: rgb(33, 53, 85);
+}
+
+.wrapper button:active:after {
+  width: 100%;
 }
 
 .contact-info {
