--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -6,15 +6,17 @@ $font1: "museo-slab";
 $font2: "museo-slab-rounded";
 $font3: "sans-serif";
 $font3: "sans";
-$color1: rgb(33,53,85,1);    
-$color2: rgb(79,112,156,1);
+$color1: rgb(33, 53, 85, 1);
+$color2: rgb(79, 112, 156, 1);
 $color3: rgb(205, 159, 250);
 $color4: rgb(187, 191, 202);
-$color4s: rgb(187, 191, 202,0.7);
+$color4s: rgb(187, 191, 202, 0.7);
 $color5: white;
 $color6: black;
 $color7: rgb(73, 84, 100);
-$color8:rgb(122, 96, 255);
+$color8: rgb(122, 96, 255);
+$color9: rgb(40, 60, 134);
+$color10: rgb(69, 162, 71);
 $xs1: 10px;
 $xs2: 20px;
 $xs3: 30px;
@@ -34,14 +36,17 @@ $lg3: 400px;
     outline: none;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;/*Respetar los padding adicionales*/
+    box-sizing: border-box;
+    /*Respetar los padding adicionales*/
     font-family: $font1, $font3;
     font-weight: lighter;
 }
+
 /* ------------Smooth Scrolling------------- */
 html {
     scroll-behavior: smooth;
 }
+
 /* ------------General Data------------- */
 h1,
 h2,
@@ -49,9 +54,21 @@ h3,
 p {
     font-weight: lighter;
 }
-h1, h2, h3 {
-	font-weight: 700;
+
+h1,
+h2,
+h3 {
+    font-weight: 700;
 }
+
+h2 {
+    font-size: 25px;
+}
+
+h3 {
+    font-size: 23px;
+}
+
 a {
     font-weight: lighter;
     text-decoration: none;
@@ -59,6 +76,7 @@ a {
     cursor: pointer;
     color: $color1;
 }
+
 .body {
     height: -o-calc(100% - 65px);
     /* opera */
@@ -70,216 +88,181 @@ a {
     padding-top: $md3;
     padding-bottom: $xs2;
 }
-.footer{
+
+.footer {
     margin-top: $xs1;
     padding: $xs2;
     letter-spacing: 5px;
 }
-.footer i{
+
+.footer i {
     letter-spacing: 20px;
     justify-self: center;
 }
-h2 {
-	font-size: 25px;
-}
-h3 {
-	font-size: 23px;
-}
+
 .prelative {
-	position:relative
+    position: relative
 }
+
 .section-padding {
-	padding:$md1 0px;
+    padding: $md1 0px;
 }
+
 .section-content {
-	margin-top: $md1;
+    margin-top: $md1;
 }
+
 .sectioner-header {
-	width:69%;
-	margin:0 auto;
+    width: 69%;
+    margin: 0 auto;
 }
+
 .sectioner-header p {
-	font-size: 17px;
+    font-size: 17px;
 }
+
 .media-right-margin {
-	margin-right:25px;
+    margin-right: 25px;
 }
+
 /*---- Headers Underline Start ----*/
 .line {
-	height: 2px;
-	width: $sm1;
-	background: $color4;
-	display: block;
-	margin: $xs2 auto $xs2;
+    height: 2px;
+    width: $sm1;
+    background: $color4;
+    display: block;
+    margin: $xs2 auto $xs2;
 }
+
 .line::after {
-	content:"";
-	position: absolute;
-	left: 50%;
-	width: calc($md3 + $sm1);
-	height: 2px;
-	border-bottom: 2px dashed #BBBFCA;
-	margin-left: -75px;
+    content: "";
+    position: absolute;
+    left: 50%;
+    width: calc($md3 + $sm1);
+    height: 2px;
+    border-bottom: 2px dashed #BBBFCA;
+    margin-left: -75px;
 }
+
 /*---- Headers Underline End ----*/
 /* ------------ Index Start ------------- */
 
 /*---- Navbar Start----*/
 .navbar {
-	box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.049803922);
-	position: fixed;
-	right: 0;
-	left: 0;
-	width: 100%;
-	padding-left: 0;
-	padding-right: 0;
-	min-height: $sm1;
-	line-height: $sm1;
-	background: transparent;
-	z-index: 1030;
+    box-shadow: 0 1px 8px 3px rgba(0, 0, 0, 0.049803922);
+    position: fixed;
+    right: 0;
+    left: 0;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    min-height: $sm1;
+    line-height: $sm1;
+    background: transparent;
+    z-index: 1030;
 }
 
 .navbar .nav-item {
-	margin: 0 5px;
-	padding: 0;
+    margin: 0 5px;
+    padding: 0;
 }
+
 .navbar .nav-item a {
-	color: $color6;
-	text-transform: uppercase;
-	font-weight: 600;
-	font-size: 13px;
+    color: $color6;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 13px;
 }
+
 .navbar .nav-item a:hover {
-	color: $color7;
+    color: $color7;
 }
+
 .navbar .nav-link {
-	position: relative;
-	padding: 0;
+    position: relative;
+    padding: 0;
 }
+
 .navbar .navbar-toggler {
-	cursor: pointer;
+    cursor: pointer;
 }
+
 .navbar .navbar-toggler span {
-	color: $color5;
+    color: $color5;
 }
-.navbar-style2 .active:after, .navbar-style2 .nav-link:after {
-	display: none;
+
+.navbar-style2 .active:after,
+.navbar-style2 .nav-link:after {
+    display: none;
 }
-.logo-1{
+
+.logo-1 {
     height: $sm1;
 }
+
 /*---- Navbar End ----*/
 /*---- Banner Start ----*/
 .banner {
-	background: $color4;
-	background:  linear-gradient(to left, $color1 35%, $color2 46%);
-	padding:$md3 0px;
-	position:relative;
+    background: $color4;
+    background: linear-gradient(to left, $color1 35%, $color2 46%);
+    padding: $md3 0px;
+    position: relative;
 }
-.banner::before {
-	content: "";
-	display: block;
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;	
-}
-.banner-content ul{
-   list-style: none;
-}
-.banner-content a{
-    color: $color5;
- }
-.banner-title{
+
+.banner-title {
     color: $color5;
     padding: $xs2;
-    z-index: 100;
 }
+
 .banner-text {
-    padding-right:$md1;
-	margin:$sm1 0px 0px;
-	margin:$xs4 0px;
+    padding-right: $md1;
+    margin: $sm1 0px 0px;
+    margin: $xs4 0px;
 }
-.banner-img{
-    border-radius: $xs2;
-}
+
 .banner-text p {
-	margin: 25px 0px;
+    margin: 25px 0px;
     padding-bottom: $xs2;
 }
-.svg-wave {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
+
+.banner-content a {
+    font-size: $xs2;
+    color: $color5;
 }
+
+.banner-img {
+    border-radius: $xs2;
+}
+
+.svg-wave {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
 /*---- Banner End ----*/
 
 /*---- Travel Tips Background End----*/
 .video-overlay {
-	background: linear-gradient(to left, $color1 35%, $color2 46%);
+    background: linear-gradient(to left, $color1 35%, $color2 46%);
 }
-/*---- Travel Tips Background End ----*/
 
-.contact {
-	background: $color4;
-	background: linear-gradient(to left, $color1 35%, $color2 46%);
-	padding:$md3 0px;
-	position:relative;
-}
-.contact::before {
-	content: "";
-	display: block;
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	
-}
-#contact_form textarea {
-	resize: none;
-	padding: 1rem;
-	height: 150px;
-	background: $color5;
-	border: 0;
-	border-radius: $xs3;
-	margin-bottom: 1rem;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
-}
-.contact-info {
-	padding: 2rem 2rem 1rem;
-	border-radius: 8px;
-	background: $color4;
-	background: linear-gradient(to left, $color4, $color3);
-}
-.contact-item {
-	margin:23px 0px;
-}
-.contact-item i {
-	font-size: $xs2;
-}
-.contact-item p {
-	line-height: $xs2;
-	margin: 0;
-}
+/*---- Travel Tips Background End ----*/
 
 
 /*------ Media Query Start -------*/
 @media all and (max-width:992px) {
-.navbar .navbar-collapse {
-	overflow: auto;
-	background:  $color4s;
-	color: $color5 !important;
-	text-align: center;
-	padding: $xs1 0;
-}
-#contact_form {
-	margin-bottom:$xs2;
-}
+    .navbar .navbar-collapse {
+        overflow: auto;
+        background: $color4s;
+        color: $color5 !important;
+        text-align: center;
+        padding: $xs1 0;
+    }
+
+    #contact_form {
+        margin-bottom: $xs2;
+    }
 }
 
 @media all and (max-width:768px) {
@@ -287,15 +270,18 @@ h3 {
         padding-right: 0px;
         padding-bottom: $xs2;
         margin: $xs1 0px 0px;
-    }  
-    #contact_form {
-        margin-bottom:$xs2;
     }
+
+    #contact_form {
+        margin-bottom: $xs2;
+    }
+
     .contact-item {
         font-size: 12px;
     }
 }
-    /*------ Media Query End -------*/ 
+
+/*------ Media Query End -------*/
 /* ------------ Index End ------------- */
 
 /* ------------ Personalized Sections ------------- */
@@ -497,74 +483,131 @@ h3 {
         height: 37rem;
     }
 }
+
 /* ------------ CONTACT ME SECTION 4 CSS FOR INDEX REUSED FROM THE PAGES CSS------------- */
 /* ------------ PAGES CSS ------------- */
 /* -------------CONTACT ME REUSE FOR INDEX VIEW------------- */
 /*Body*/
-.contactB {  
+
+.contact {
+    background: $color4;
+    background: linear-gradient(to left, $color1 35%, $color2 46%);
+    padding: $md3 0px;
+    position: relative;
+}
+
+.contact-item {
+    margin: 23px 0px;
+}
+
+.contact-item i {
+    font-size: $xs2;
+}
+
+.contact-item p {
+    line-height: $xs2;
+    margin: 0;
+}
+
+.contactB {
     background-image: url(../Media/fade.JPG);
     background-size: cover;
 }
+
 #contact_form {
-	margin-bottom:20px;
+    margin-bottom: 20px;
 }
+
 .contact-item {
-	font-size: 12px;
+    font-size: 12px;
 }
+
 #contact_form .form-input {
-	border: 1px solid #e4e4e4;
+    border: 1px solid #e4e4e4;
 }
+
 input {
-	height: 42px;
-	padding: 0 1rem;
-	background: #fff;
-	border-radius: 30px;
-	margin-bottom: 1rem;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
-	border:0;
+    height: 42px;
+    padding: 0 1rem;
+    background: #fff;
+    border-radius: 30px;
+    margin-bottom: 1rem;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    border: 0;
 }
+
 #contact_form textarea {
-	resize: none;
-	padding: 1rem;
-	height: 150px;
-	background: $color5;
-	border: 0;
-	border-radius: 30px;
-	margin-bottom: 1rem;
-	-webkit-transition: all 0.3s ease-in-out;
-	-moz-transition: all 0.3s ease-in-out;
-	-o-transition: all 0.3s ease-in-out;
-	transition: all 0.3s ease-in-out;
+    resize: none;
+    padding: 1rem;
+    height: 150px;
+    background: $color5;
+    border: 0;
+    border-radius: 30px;
+    margin-bottom: 1rem;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
 }
 .btn-grad {
+    transform: translate(0%, 0%);
     padding: .7rem 2rem;
-	display: inline-block;
-	color: $color5;
-	border-radius: 2rem;
-	border: 0;
-	background: $color8;
-	background: linear-gradient(to left, $color8, $color3);
-	cursor:pointer;
+    display: inline-block;
+    color: white;
+    border-radius: 2rem;
+    border: 0;
+    background: linear-gradient(to left, rgb(122, 96, 255), rgb(205, 159, 250));
+    cursor: pointer;
 }
+
+.wrapper button span {
+    position: relative;
+    z-index: 2;
+}
+
+.wrapper button:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    border-radius: 2rem;
+    background: linear-gradient(to left, rgb(40, 60, 134), rgb(69, 162, 71));
+    transition: all .35s;
+}
+
+.wrapper button:hover {
+    color: rgb(33, 53, 85, 1);
+}
+
+.wrapper button:active:after {
+    width: 100%;
+}
+
 .contact-info {
-	padding: 2rem 2rem 1rem;
-	border-radius: 8px;
-	background: $color8;
-	background: linear-gradient(to left, $color8, $color3);
+    padding: 2rem 2rem 1rem;
+    border-radius: 8px;
+    background: $color8;
+    background: linear-gradient(to left, $color8, $color3);
 }
+
 .contact-item {
-	margin:23px 0px;
+    margin: 23px 0px;
 }
+
 .contact-item i {
-	font-size: 20px;
+    font-size: 20px;
 }
+
 .contact-item p {
-	line-height: 20px;
-	margin: 0;
+    line-height: 20px;
+    margin: 0;
 }
+
 /*------ Animation start------*/
 
 
@@ -787,7 +830,7 @@ input {
 
 .item11 {
     background-image: url(../Media/Flower.JPG);
-    
+
 }
 
 .item12 {
@@ -814,9 +857,11 @@ input {
     background-image: url(../Media/Bird.png);
     background-position: left;
 }
+
 .item18 {
     background-image: url(../Media/Ishira.png);
 }
+
 .container {
     max-width: 100rem;
     margin: 0 auto;
@@ -880,7 +925,7 @@ input {
 @media only screen and (min-width:1024px) {
     .galeria {
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(21, 7rem );
+        grid-template-rows: repeat(21, 7rem);
     }
 
     /* First COlumn */
@@ -895,6 +940,7 @@ input {
         grid-column: 1/2;
         grid-row: 7/9;
     }
+
     .item7 {
         /* Monument */
         grid-column: 1/2;
@@ -918,6 +964,7 @@ input {
         grid-column: 1/2;
         grid-row: 20/24;
     }
+
     .item4 {
         /* Fade */
         grid-column: 1/2;
@@ -931,16 +978,19 @@ input {
         grid-column: 2/3;
         grid-row: 1/7;
     }
+
     .item12 {
         /* Poet */
         grid-column: 2/3;
         grid-row: 7/14;
     }
+
     .item18 {
         /* Ishira */
         grid-column: 2/3;
         grid-row: 14/21;
     }
+
     .item14 {
         /* Bogotá Center */
         grid-column: 2/3;
@@ -984,6 +1034,7 @@ input {
         grid-column: 3/4;
         grid-row: 20/24;
     }
+
     .item11 {
         /* Flower */
         grid-column: 3/4;
