improve index, improving images format

--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -31,7 +31,7 @@ h3 {
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 30px;
 }
 
 h3 {
@@ -175,29 +175,25 @@ a {
   padding: 100px 0px;
   position: relative;
 }
-
-.banner-title {
+.banner .banner-content .banner-title {
   color: white;
-  padding: 20px;
+  padding: 10px;
 }
-
-.banner-text {
+.banner .banner-content .banner-text {
+  font-size: 20px;
   padding-right: 80px;
   margin: 50px 0px 0px;
   margin: 40px 0px;
-}
-
-.banner-text p {
   margin: 25px 0px;
-  padding-bottom: 20px;
 }
-
-.banner-content a {
+.banner .banner-content a {
   font-size: 20px;
   color: white;
+  text-shadow: 2px 2px black;
 }
 
 .banner-img {
+  height: 350px;
   border-radius: 20px;
 }
 
@@ -214,6 +210,17 @@ a {
 }
 
 /*---- Travel Tips Background End ----*/
+/* Media Query for Mobile Devices */
+@media (min-width: 360px) and (max-width: 480px) {
+  .banner-content {
+    padding-right: 0px;
+    padding-bottom: 20px;
+    margin: 10px 0px 0px;
+  }
+  .banner-content .banner-img {
+    height: 250px;
+  }
+}
 /*------ Media Query Start -------*/
 @media all and (max-width: 992px) {
   .navbar .navbar-collapse {
@@ -256,19 +263,43 @@ a {
   background-attachment: fixed;
   color: black;
 }
+.about-section1 .about-content img, .about-section1 h1, .about-section1 h2, .about-section1 p {
+  padding-bottom: 10px;
+}
+.about-section1 .about-content h1 {
+  color: rgb(33, 53, 85);
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-decoration-thickness: 2px;
+  text-decoration-color: rgb(205, 159, 250);
+}
+.about-section1 .about-section h3 {
+  font-size: 2em;
+}
+.about-section1 .about-content h2 a {
+  text-shadow: 2px 2px rgba(79, 112, 156, 0.7);
+  transition: all 0.33s ease-out;
+}
+.about-section1 .about-content h2 a:hover {
+  transform: scale(1.1);
+}
+.about-section1 .about-text {
+  width: 80%;
+  margin: 0 auto;
+}
 
 /* Media Query for Mobile Devices */
 @media (min-width: 360px) and (max-width: 480px) {
   .about-section1--img {
-    width: 3 50px;
+    width: 340px;
   }
   .about-text {
-    width: 3 50px;
+    width: 340px;
   }
 }
 /* ------------ TRAVEL TIPS SECTION 2------------- */
 #sec2-travel-vid-tip1 {
-  height: 400PX;
+  height: 400px;
   grid-area: vid1;
 }
 
@@ -281,7 +312,7 @@ a {
 }
 
 #sec2-travel-vid-tip2 {
-  height: 400PX;
+  height: 400px;
   grid-area: vid2;
 }
 
@@ -294,7 +325,7 @@ a {
 }
 
 #sec2-travel-vid-tip3 {
-  height: 400PX;
+  height: 400px;
   grid-area: vid3;
 }
 
@@ -309,7 +340,6 @@ a {
 .sec2-travel-video {
   display: grid;
   margin: 0 auto;
-  width: 80%;
   grid-gap: 10px;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas: "vid1 vid2 vid3" "title1 title2 title3" "text1 text2 text3";
@@ -323,49 +353,39 @@ a {
 }
 
 /* Media Query for Mobile Devices */
-@media (min-width: 360px) and (max-width: 480px) {
-  #sec2-travel-text-tip1 {
+/* Media Query for low resolution  Tablets, Ipads */
+@media (min-width: 360px) and (max-width: 773px) {
+  #sec2-travel-vid-tip3 {
     visibility: hidden;
   }
   #sec2-travel-vid-tip2 {
     visibility: hidden;
   }
-  #sec2-travel-title-tip2 {
-    visibility: hidden;
+  .sec2-travel-video {
+    display: grid;
+    margin: 0 auto;
+    grid-gap: 10px;
+    grid-template-columns: 100%;
+    grid-template-areas: "vid1" "title1" "text1";
+    height: 665px;
   }
-  #sec2-travel-text-tip2 {
-    visibility: hidden;
-  }
+}
+/* Media Query for Tablets Ipads portrait mode */
+@media (min-width: 774px) and (max-width: 938px) {
   #sec2-travel-vid-tip3 {
     visibility: hidden;
   }
-  #sec2-travel-title-tip3 {
-    visibility: hidden;
-  }
-  #sec2-travel-text-tip3 {
-    visibility: hidden;
-  }
   .sec2-travel-video {
-    display: block;
-    position: relative;
-    text-align: center;
-    height: 4 20px;
-  }
-  #sec2-travel-vid-tip1 {
-    position: absolute;
-    top: 10px;
-    left: 50px;
-  }
-  #sec2-travel-title-tip1 {
-    position: absolute;
-    top: 20px;
-    left: 70px;
-    font-weight: bold;
+    width: 100vh;
+    display: grid;
+    margin: 0 auto;
+    grid-gap: 10px;
+    grid-template-columns: 50% 50%;
+    grid-template-areas: "vid1 vid2" "title1 title2" "text1 text2";
+    height: 665px;
   }
 }
 /* ------------To be Set Up Later On If Needed------------- */
-/* Media Query for low resolution  Tablets, Ipads */
-/* Media Query for Tablets Ipads portrait mode */
 /* Media Query for Laptops and Desktops */
 /* Media Query for Large screens */
 /* ------------ GALLERY SECTION 3------------- */
@@ -608,10 +628,6 @@ input {
   font-size: 3em;
 }
 
-.about-section h3 {
-  font-size: 2em;
-}
-
 .results {
   display: flex;
   flex-direction: column;
@@ -687,7 +703,7 @@ input {
 
 .item:hover {
   filter: grayscale(0%);
-  transform: scale(1.2);
+  transform: scale3d(1.1, 1.1, 1.1);
 }
 
 .item1 {
@@ -752,6 +768,7 @@ input {
 
 .item16 {
   background-image: url(../Media/Monserrat.JPG);
+  background-position: left;
 }
 
 .item17 {
@@ -767,32 +784,6 @@ input {
   max-width: 100rem;
   margin: 0 auto;
   padding: 0 2rem 2rem;
-}
-
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  margin: -1rem -1rem;
-}
-
-.gallery-item {
-  flex: 1 0 24rem;
-  margin: 1rem;
-  box-shadow: 0.3rem 0.4rem 0.4rem rgba(0, 0, 0, 0.4);
-  overflow: hidden;
-}
-
-.gallery-image {
-  display: block;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  transition: transform 400ms ease-OUT;
-}
-
-.gallery-image:hover {
-  transform: scale(1.1);
 }
 
 /* inician las media queries */
@@ -815,6 +806,20 @@ input {
   }
   .item2 {
     background-size: contain;
+  }
+}
+/* Media Query for low resolution  Tablets, Ipads */
+@media (min-width: 481px) and (max-width: 767px) {
+  .galeria {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(6, 200px);
+  }
+}
+/* Media Query for Tablets Ipads portrait mode */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .galeria {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(9, 200px);
   }
 }
 @media only screen and (min-width: 1024px) {
@@ -916,15 +921,7 @@ input {
     grid-row: 24/44;
   }
 }
-@media only screen and (min-width: 768px) and (max-width: 1023px) {
-  .galeria {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(9, 200px);
-  }
-}
 /* ------------To be Set Up Later On If Needed------------- */
-/* Media Query for low resolution  Tablets, Ipads */
-/* Media Query for Tablets Ipads portrait mode */
 /* Media Query for Laptops and Desktops */
 /* Media Query for Large screens */
 /* ------------ BACKUP BUTTON ------------*/
