Solving bug with gallery image

--- a/Assets/CSS/styles.scss
+++ b/Assets/CSS/styles.scss
@@ -834,7 +834,7 @@ input {
 }
 
 .item9 {
-    background-image: url(../Media/MedellínCent.webp);
+    background-image: url(../Media/MedCenter.webp);
 }
 
 .item10 {
