--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -739,7 +739,7 @@ input {
 }
 
 .item9 {
-  background-image: url(../Media/MedellínCent.webp);
+  background-image: url(../Media/MedCenter.webp);
 }
 
 .item10 {
